tests/rascal/negative/type_errors/L1/13_expression_ES10_D4_28.ob
MODULE Test13;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               p := (~ (1 = z));
               p := (2 = 2);
  (* error *)  y := (+ 0);
               z := (+ 0);
               q := (((y + (+ z)) + ((z MOD 0) + (200 MOD 200))) # (- ((x DIV 1) + (+ 1223))));
               p := ((200 DIV (2 * (200 - 200))) <= 1223);
               y := 1;
               r := ((200 # (2 + 200)) & p);
               r := (2 # 0);
               z := 0
END Test13.